# hdtv

./: .buildinfo  .bzrignore  .clang-tidy  .cmake-format.yaml  .codacy.yml  .coveragerc  .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  Dockerfile  INSTALL  MANIFEST.in  Makefile  README  README.md  TODO  changelog.md  codecov.yml  genindex.html  include_guide.html  include_tutorial.html  index.html  objects.inv  py-modindex.html  pyproject.toml  readme.md  search.html  searchindex.js  setup.cfg  setup.py  startup.py  versioneer.py
.doctrees/: environment.pickle  include_guide.doctree  include_tutorial.doctree  index.doctree
_sources/: index.rst.txt
apps/: debug.py  hdtv  hdtv-inspector.py  hdtv-startup.py  hdtv-twin.py  hdtv.py  singles.py
attic/: fitio.py
autoapi/: index.html
autocal/: autocal.py  autoshift  autoshift-debug.py  autoshift.py  findsig.py
conda.recipe/: meta.yaml
data/: hdtv.desktop
examples/: FitCalibSpektrum.py  FitManySpectra.py  ShowCalibSpektrum.py  ShowManySpectra.py  ShowMatrix.py  co60.lc2
gspec/: GSCalibration.cxx  GSDisplayObj.cxx  GSDisplayObj.h  GSDisplaySpec.cxx  GSDisplaySpec.h  GSFitter.cxx  GSFitter.h  GSMarker.cxx  GSMarker.h  GSPainter.cxx  GSPainter.h  GSViewer.cxx  GSViewer.h  GSViewport.cxx  GSViewport.h  GSXMarker.h  LinkDef.h  Makefile
hdtv/: __init__.py  _version.py  app.py  cal.py  calc.py  clib  cmdhelper.py  cmdline.py  color.py  corrgroup.py  cut.py  display.py  dlmgr.py  drawable.py  dummy.py  errvalue.py  fit.py  fit_new.py  fit_old.py  fitgui.py  fitgui_old.py  fitpanel.py  fitter.py  fitxml.py  gspec.py  histo2d.py  histogram.py  hsluv.py  integral.py  libpeaks.py  manager.py  marker.py  matrix.py  options.py  peak.py  rfile_utils.py  session.py  specreader.py  spectrum.py  tabformat.py  (+8 more)
hdtv/rootext/display/: CMakeLists.txt  Calibration.cc  Calibration.cxx  Calibration.hh  DisplayBlock.cc  DisplayBlock.h  DisplayBlock.hh  DisplayCut.cc  DisplayCut.cxx  DisplayCut.h  DisplayCut.hh  DisplayFunc.cc  DisplayFunc.cxx  DisplayFunc.h  DisplayFunc.hh  DisplayObj.cc  DisplayObj.cxx  DisplayObj.h  DisplayObj.hh  DisplayObjZIndex.h  DisplayObjZIndex.hh  DisplaySpec.cc  DisplaySpec.cxx  DisplaySpec.h  DisplaySpec.hh  DisplayStack.cc  DisplayStack.cxx  DisplayStack.h  DisplayStack.hh  LinkDef.h  MTViewer.cc  MTViewer.cxx  MTViewer.h  MTViewer.hh  Makefile  Marker.cc  Marker.cxx  Marker.h  Marker.hh  Painter.cc  (+26 more)
hdtv/rootext/fit/: .EEFitter.cc.swp  Background.cxx  Background.h  Background.hh  CMakeLists.txt  EEFitter.cc  EEFitter.cxx  EEFitter.h  EEFitter.hh  ExpBg.cc  ExpBg.hh  Fitter.cc  Fitter.cxx  Fitter.h  Fitter.hh  Integral.cc  Integral.cxx  Integral.h  Integral.hh  InterpolationBg.cc  InterpolationBg.hh  LinkDef.h  Makefile  Option.hh  Param.cc  Param.h  Param.hh  PolyBg.cc  PolyBg.cxx  PolyBg.h  PolyBg.hh  TheuerkaufFitter.cc  TheuerkaufFitter.cxx  TheuerkaufFitter.h  TheuerkaufFitter.hh  Util.cc  Util.cxx  Util.h  Util.hh
hdtv/rootext/mfile-root/: CMakeLists.txt  LinkDef.h  MFile.cxx  MFile.h  MFileHist.cc  MFileHist.cxx  MFileHist.h  MFileHist.hh  MFileRoot.cc  MFileRoot.cxx  MFileRoot.h  MFileRoot.hh  Makefile  MatOp.cc  MatOp.cxx  MatOp.h  MatOp.hh  VMatrix.cc  VMatrix.cxx  VMatrix.h  VMatrix.hh
hdtv/rootext/mfile-root/matop/: matop.h  matop_adjust.c  matop_adjust.h  matop_conv.c  matop_conv.h  matop_project.c  matop_project.h
hdtv/rootext/mfile-root/mfile/: CMakeLists.txt  license.md  readme.md
hdtv/rootext/mfile-root/mfile/include/: mfile.h
hdtv/rootext/mfile-root/mfile/spec-samples/: 1k.hf8  VAX-IEEE-CONV  vax_real4.2
hdtv/rootext/mfile-root/mfile/src/: callindir.c  callindir.h  converters.c  converters.h  debug.h  disk_access.c  disk_access.h  getputint.c  getputint.h  gf2_getput.c  gf2_getput.h  gf2_minfo.c  gf2_minfo.h  lc_c1.c  lc_c1.h  lc_c2.c  lc_c2.h  lc_getput.c  lc_getput.h  lc_minfo.c  lc_minfo.h  maccess.c  maccess.h  mat_types.c  mat_types.h  mate_getput.c  mate_getput.h  mate_minfo.c  mate_minfo.h  minfo.c  mopen.c  mopen.h  oldmat_getput.c  oldmat_getput.h  oldmat_minfo.c  oldmat_minfo.h  shm_access.c  shm_access.h  shm_getput.c  shm_getput.h  (+13 more)
hdtv/rootext/mfile-root/mfile/test/: check_mfile.c
src/: gspec.h  (+33 more)
src/hdtv/rootext/calibration/: CMakeLists.txt  Calibration.cc  Calibration.hpp  LinkDef.h
src/hdtv/rootext/fit/: CMakeLists.txt  EEFitter.cc  EEFitter.hh  ExpBg.cc  Integral.cc  InterpolationBg.cc  InterpolationBg.hh  LinkDef.h  Option.hh  Util.cc  Util.hh
src/hdtv/rootext/mfile-root/: CMakeLists.txt  LinkDef.h  MFileHist.cc  MatOp.cc  MatOp.hh
src/hdtv/rootext/mfile-root/matop/: matop_adjust.c  matop_conv.c
src/hdtv/rootext/mfile-root/mfile/: CMakeLists.txt  license.md
src/hdtv/rootext/mfile-root/mfile/include/: mfile.h
src/hdtv/rootext/mfile-root/mfile/spec-samples/: 1k.hf4  1k.lf8  1k.txt  1k.vaxf  1k.vaxg  VAX-IEEE-CONV  vax_real4.0  vax_real4.1
src/hdtv/rootext/mfile-root/mfile/src/: callindir.c  converters.c  converters.h  debug.h  disk_access.c  disk_access.h  gf2_minfo.c  lc_c1.c  lc_c2.h  lc_getput.c  lc_getput.h  lc_minfo.h  maccess.h  mat_types.h  mate_getput.c  mate_getput.h  mopen.c  mopen.h  oldmat_getput.c  oldmat_minfo.c  oldmat_minfo.h  shm_getput.c  shm_getput.h  specio.c  sys_config.h  trixi_getput.c  trixi_getput.h  trixi_minfo.h  txt_getput.c  txt_getput.h  txt_minfo.h
src/hdtv/rootext/mfile-root/mfile/test/: md5sums
src/rootext/: CMakeLists.txt
src/rootext/calibration/: CMakeLists.txt
src/rootext/display/: CMakeLists.txt  DisplayObj.cc  DisplayObjZIndex.hh  DisplayStack.hh  Viewer.cc  YMarker.cc
src/rootext/fit/: CMakeLists.txt  ExpBg.hh  Fitter.cc  LinkDef.h
src/rootext/mfile-root/: CMakeLists.txt  VMatrix.cc  VMatrix.hh
src/rootext/mfile-root/matop/: matop_conv.c  matop_project.c  matop_project.h
src/rootext/mfile-root/mfile/include/: mfile.h
src/rootext/mfile-root/mfile/spec-samples/: 1k.lf4
src/rootext/mfile-root/mfile/src/: callindir.c  callindir.h  getputint.h  lc_minfo.c  lc_minfo.h  maccess.c  minfo.c  shm_access.h  shm_minfo.c  shm_minfo.h  sys_endian.h  txt_minfo.c
(+642 files in other folders)
