[build-system]
requires = ["setuptools", "versioningit"]
build-backend = "setuptools.build_meta"

[project]
name = "hdtv"
description = "HDTV - Nuclear Spectrum Analysis Tool"
readme = "README.md"
license = "GPL-2.0-only"
maintainers = [{name = "Jan Mayer", email = "jan.mayer@ikp.uni-koeln.de"}]
keywords = [
    "analysis",
    "data-analysis",
    "gamma-spectroscopy",
    "nuclear-physics",
    "nuclear-spectrum-analysis",
    "physics",
    "python",
    "root",
    "root-cern",
    "spectroscopy",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: X11 Applications",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: C",
    "Programming Language :: C++",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
]
urls = {Homepage = "https://github.com/janmayer/hdtv"}
dependencies = [
    "hsluv",
    "ipython",
    "matplotlib",
    "numpy",
    "prompt_toolkit>=3.0.14",
    "scipy",
    "traitlets",
    "uncertainties",
]
dynamic = ["version"]

[project.scripts]
hdtv = "hdtv.app:run"

[dependency-groups]
dev = [
    "pytest", "pytest-cov",
    "docutils",
    "ruff",
]

[tool.setuptools]
packages = [
    "hdtv",
    "hdtv.database",
    "hdtv.backgroundmodels",
    "hdtv.efficiency",
    "hdtv.peakmodels",
    "hdtv.plugins",
    "hdtv.rootext",
]
include-package-data = false

[tool.setuptools.package-data]
hdtv = ["share/*"]
"hdtv.rootext" = [
    "calibration/*",
    "display/*",
    "fit/*",
    "mfile-root/*",
    "mfile-root/*/*",
    "mfile-root/*/*/*",
]

[tool.setuptools.data-files]
"share/man/man1" = ["doc/guide/*.1"]
"share/zsh/site-functions" = ["data/completions/_hdtv"]
"share/bash-completion/completions" = ["data/completions/hdtv"]
"share/applications" = ["data/hdtv.desktop"]

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.ruff]
target-version = "py39"
exclude = ["*.asv", "benchmarks"]
lint.ignore = [
    "E741",
    "E402",
    "E501",
    "E722",
    "PLR",
    "PLC0415",
    "PLW1641",
    "PLW2901",
    "PLW0642",
    "RUF012",  # enforces type annotations on a codebase that lacks type annotations
    "B904",
    "ISC001",
    "UP031",  # Use format specifiers instead of percent format
]
lint.select = [
    "E",
    "F",
    "W",  # flake8
    "B",
    #"B904",  # flake8-bugbear
    "I",  # isort
    #"ARG",         # flake8-unused-arguments
    "C4",  # flake8-comprehensions
    "ISC",  # flake8-implicit-str-concat
    "PGH",  # pygrep-hooks
    "PIE",  # flake8-pie
    "PL",  # pylint
    #"PT",  # flake8-pytest-style
    #"RUF",  # Ruff-specific
    #"SIM",  # flake8-simplify
    "UP",  # pyupgrade
    "YTT"  # flake8-2020
]

[tool.pytest.ini_options]
norecursedirs = [".*", "*.egg*", "build", "dist", "conda.recipe", "efficiency", "ui", "tests/helpers"]
junit_family = "xunit2"
addopts = """
--junitxml=junit.xml
--ignore run_test.py
--cov-report term-missing
--tb native
--strict
--durations=20"""
markers = ["serial: execute test serially (to avoid race conditions)"]
